# c_static_array_lib

./: README.md  meson.build  meson_options.txt  tasks.py
include/: static_array_lib.h
src/: static_array_lib.h
subprojects/: unity.wrap
test/: meson.build
test/test_sarr/: meson.build  test_sarr.c  test_sarr_int.c  test_sarr_struct.c
test/test_sarrs/: meson.build  test_sarrs_int.c  test_sarrs_struct.c
test/test_unity/: meson.build
